--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
             <a href="index.html" class="logo"><i class='bx bx-code-block'></i> IT SQUAD</a>
             <div class="controls">
                 <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                    style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
             </div>
         </div>
