--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
                     </li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -38,7 +39,7 @@
             </nav>
             <div class="controls">
                 <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                    style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -46,11 +47,13 @@
     </header>
 
     <main>
-        <section class="hero" style="min-height: 40vh;">
+        <section class="hero"
+            style="min-height: 40vh; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
             <div class="container" style="text-align: center;">
-                <div class="hero-content" style="margin: 0 auto;">
-                    <h1>About Our Team</h1>
-                    <p style="margin: 0 auto;">Dedicated to delivering the best IT support experience.</p>
+                <div class="hero-content" style="margin: 0 auto; color: white;">
+                    <h1 style="color: white;">About Our Team</h1>
+                    <p style="margin: 0 auto; color: #e2e8f0;">Dedicated to delivering the best IT support experience.
+                    </p>
                 </div>
             </div>
         </section>
@@ -208,14 +211,14 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
-                        <li><i class='bx bx-map'></i> 123 Tech Street, Silicon Valley</li>
-                        <li><i class='bx bx-phone'></i> +1 234 567 890</li>
+                        <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                        <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
                         <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 IT SQUAD. All rights reserved.</p>
+                <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
             </div>
         </div>
     </footer>
