--- a/index2.html
+++ b/index2.html
@@ -86,6 +86,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -99,8 +100,7 @@
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                <button id="-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -154,7 +154,7 @@
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
                             style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-news' style="font-size: 4rem; color: #94a3b8;"></i>
+                            <i class='bx bx-news' style="font-size: 4rem; color: var(--primary);"></i>
                         </div>
                         <div style="padding: 2rem;">
                             <h3>The Future of Cloud Computing</h3>
@@ -166,7 +166,7 @@
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
                             style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-lock-alt' style="font-size: 4rem; color: #94a3b8;"></i>
+                            <i class='bx bx-lock-alt' style="font-size: 4rem; color: var(--secondary);"></i>
                         </div>
                         <div style="padding: 2rem;">
                             <h3>Cybersecurity Trends 2024</h3>
@@ -313,12 +313,12 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
-                        <li><i class='bx bx-envelope'></i> enterprise@itsquad.com</li>
+                        <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 IT SQUAD PRO. All rights reserved.</p>
+                <p>&copy; 2026 IT SQUAD PRO. All rights reserved.</p>
             </div>
         </div>
     </footer>
