--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -8,16 +8,35 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
+        body {
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            background-color: var(--bg-body);
+        }
+
         .dashboard-container {
             display: grid;
             grid-template-columns: 250px 1fr;
-            min-height: calc(100vh - 74px);
+            flex: 1;
+            min-height: 0;
+            width: 100%;
+            overflow: hidden;
         }
 
         .sidebar {
             background-color: var(--bg-card);
             border-right: 1px solid var(--border);
             padding: 2rem 1rem;
+            overflow-y: auto;
+            height: 100%;
+            /* Explicitly enforce desktop state */
+            position: static;
+            transform: none;
+            display: block;
+            width: auto;
+            z-index: auto;
         }
 
         .sidebar-menu a {
@@ -28,7 +47,7 @@
             border-radius: 8px;
             color: var(--text-muted);
             font-weight: 500;
-            transition: all 0.3s;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .sidebar-menu a:hover,
@@ -40,6 +59,10 @@
         .main-content {
             padding: 2rem;
             background-color: var(--bg-body);
+            overflow-y: auto;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
         }
 
         .table-responsive {
@@ -66,6 +89,66 @@
             background-color: var(--bg-body);
             font-weight: 600;
         }
+
+        @media(max-width: 768px) {
+            .dashboard-container {
+                grid-template-columns: 1fr;
+            }
+
+            .sidebar {
+                position: fixed;
+                left: 0;
+                top: 74px;
+                bottom: 0;
+                width: 250px;
+                z-index: 1000;
+                background-color: var(--bg-card);
+                transform: translateX(-100%);
+                transition: transform 0.3s ease;
+                display: block;
+                box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+                will-change: transform;
+            }
+
+            .sidebar.active {
+                transform: translateX(0);
+            }
+
+            .sidebar-overlay {
+                position: fixed;
+                top: 74px;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(0, 0, 0, 0.5);
+                z-index: 999;
+                display: none;
+                backdrop-filter: blur(2px);
+            }
+
+            .sidebar-overlay.active {
+                display: block;
+            }
+        }
+
+        /* HARD SAFEGUARD: Force desktop layout on larger screens */
+        @media(min-width: 769px) {
+            .dashboard-container {
+                grid-template-columns: 250px 1fr !important;
+            }
+
+            .sidebar {
+                position: static !important;
+                transform: none !important;
+                display: block !important;
+                width: auto !important;
+                box-shadow: none !important;
+            }
+
+            .sidebar-overlay {
+                display: none !important;
+            }
+        }
     </style>
 </head>
 
@@ -85,6 +168,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="admin-dashboard.html" class="active">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -101,7 +185,7 @@
                     style="width: 32px; height: 32px; border-radius: 50%;">
                 <div class="controls" style="margin-left: 1rem;">
                     <button id="rtl-toggle" class="btn btn-outline"
-                        style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                        style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
                     <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 </div>
             </div>
@@ -118,6 +202,7 @@
                 <a href="index.html"><i class='bx bx-log-out'></i> Logout</a>
             </div>
         </aside>
+        <div class="sidebar-overlay"></div>
 
         <main class="main-content">
             <div class="flex justify-between items-center" style="margin-bottom: 2rem;">
@@ -247,30 +332,106 @@
                         <div style="width: 100%; max-width: 300px;">
                             <div style="display: flex; justify-content: space-between; margin-bottom: 1rem;">
                                 <span>Gold SLA (99.9%)</span>
-                                <span style="color: #22c55e; font-weight: 700;">100%</span>
+                                <span style="color: var(--success); font-weight: 700;">100%</span>
                             </div>
                             <div
                                 style="width: 100%; height: 10px; background: var(--border); border-radius: 5px; margin-bottom: 1.5rem;">
-                                <div style="width: 100%; height: 100%; background: #22c55e; border-radius: 5px;"></div>
+                                <div style="width: 100%; height: 100%; background: var(--success); border-radius: 5px;">
+                                </div>
                             </div>
 
                             <div style="display: flex; justify-content: space-between; margin-bottom: 1rem;">
                                 <span>Silver SLA (99.0%)</span>
-                                <span style="color: #f59e0b; font-weight: 700;">98.5%</span>
+                                <span style="color: var(--warning); font-weight: 700;">98.5%</span>
                             </div>
                             <div
                                 style="width: 100%; height: 10px; background: var(--border); border-radius: 5px; margin-bottom: 1.5rem;">
-                                <div style="width: 98.5%; height: 100%; background: #f59e0b; border-radius: 5px;"></div>
+                                <div
+                                    style="width: 98.5%; height: 100%; background: var(--warning); border-radius: 5px;">
+                                </div>
                             </div>
 
                             <div style="display: flex; justify-content: space-between; margin-bottom: 1rem;">
                                 <span>Bronze SLA (98.0%)</span>
-                                <span style="color: #f43f5e; font-weight: 700;">97.2%</span>
+                                <span style="color: var(--accent); font-weight: 700;">97.2%</span>
                             </div>
                             <div
                                 style="width: 100%; height: 10px; background: var(--border); border-radius: 5px; margin-bottom: 1rem;">
-                                <div style="width: 97.2%; height: 100%; background: #f43f5e; border-radius: 5px;"></div>
+                                <div style="width: 97.2%; height: 100%; background: var(--accent); border-radius: 5px;">
+                                </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- New Charts Row -->
+            <div class="grid"
+                style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
+                <!-- Department Distribution Pie Chart -->
+                <div class="card">
+                    <h3>Tickets by Department</h3>
+                    <div style="display: flex; justify-content: center; margin-top: 1rem;">
+                        <div
+                            style="width: 200px; height: 200px; border-radius: 50%; background: conic-gradient(var(--primary) 0% 35%, var(--purple) 35% 60%, var(--teal) 60% 80%, var(--warning) 80% 100%); position: relative;">
+                            <div
+                                style="position: absolute; width: 140px; height: 140px; background: var(--bg-card); border-radius: 50%; top: 30px; left: 30px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
+                                <span style="font-size: 1.5rem; font-weight: 700;">Total</span>
+                                <span style="color: var(--text-muted); font-size: 0.9rem;">Distribution</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        style="display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; margin-top: 1rem; font-size: 0.85rem;">
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--primary); border-radius: 50%;">
+                            </div> IT Support
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--purple); border-radius: 50%;">
+                            </div> HR
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--teal); border-radius: 50%;">
+                            </div> Finance
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--warning); border-radius: 50%;">
+                            </div> Sales
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Agent Status Doughnut Chart -->
+                <div class="card">
+                    <h3>Agent Status Overview</h3>
+                    <div style="display: flex; justify-content: center; margin-top: 1rem;">
+                        <div
+                            style="width: 200px; height: 200px; border-radius: 50%; background: conic-gradient(var(--success) 0% 45%, var(--warning) 45% 70%, var(--accent) 70% 85%, var(--text-muted) 85% 100%); position: relative;">
+                            <div
+                                style="position: absolute; width: 120px; height: 120px; background: var(--bg-card); border-radius: 50%; top: 40px; left: 40px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
+                                <span style="font-size: 2rem; font-weight: 700;">24</span>
+                                <span style="color: var(--text-muted); font-size: 0.8rem;">Agents</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        style="display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; margin-top: 1rem; font-size: 0.85rem;">
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--success); border-radius: 50%;">
+                            </div> Online
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--warning); border-radius: 50%;">
+                            </div> Away
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--accent); border-radius: 50%;">
+                            </div> Busy
+                        </div>
+                        <div style="display: flex; align-items: center; gap: 0.5rem;">
+                            <div style="width: 10px; height: 10px; background: var(--text-muted); border-radius: 50%;">
+                            </div> Offline
                         </div>
                     </div>
                 </div>
