--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -40,8 +41,8 @@
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 0.8rem;">🌐
-                    RTL</button>
+                <button id="rtl-toggle" class="btn btn-outline"
+                    style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -172,7 +173,7 @@
                         <button class="btn btn-outline" style="width: 100%;">Choose Plan</button>
                     </div>
                     <div class="card"
-                        style="text-align: center; border: 2px solid var(--primary); transform: scale(1.05);">
+                        style="text-align: center; border: 2px solid var(--primary); transform: scale(1.05); background-color: rgba(79, 70, 229, 0.05);">
                         <div
                             style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: var(--primary); color: white; padding: 2px 10px; border-radius: 10px; font-size: 0.8rem;">
                             POPULAR</div>
@@ -219,23 +220,22 @@
                     <p>Got questions? We have answers.</p>
                 </div>
                 <div style="max-width: 800px; margin: 0 auto;">
-                    <div class="card" style="margin-bottom: 1rem; cursor: pointer;">
-                        <h4 style="display: flex; justify-content: space-between;">How fast is the response time? <i
-                                class='bx bx-chevron-down'></i></h4>
-                        <p style="margin-top: 0.5rem; color: var(--text-muted);">We guarantee a response within 15
-                            minutes for critical issues and 1 hour for regular tickets.</p>
+                    <div class="faq-item">
+                        <div class="faq-question">How fast is the response time? <i class='bx bx-chevron-down'></i>
+                        </div>
+                        <div class="faq-answer">We guarantee a response within 15 minutes for critical issues and 1 hour
+                            for regular tickets.</div>
                     </div>
-                    <div class="card" style="margin-bottom: 1rem; cursor: pointer;">
-                        <h4 style="display: flex; justify-content: space-between;">Do you support remote work setups? <i
-                                class='bx bx-chevron-down'></i></h4>
-                        <p style="margin-top: 0.5rem; color: var(--text-muted);">Yes, we specialize in configuring
-                            secure VPNs and remote desktop solutions for distributed teams.</p>
+                    <div class="faq-item">
+                        <div class="faq-question">Do you support remote work setups? <i class='bx bx-chevron-down'></i>
+                        </div>
+                        <div class="faq-answer">Yes, we specialize in configuring secure VPNs and remote desktop
+                            solutions for distributed teams.</div>
                     </div>
-                    <div class="card" style="margin-bottom: 1rem; cursor: pointer;">
-                        <h4 style="display: flex; justify-content: space-between;">Can I upgrade my plan later? <i
-                                class='bx bx-chevron-down'></i></h4>
-                        <p style="margin-top: 0.5rem; color: var(--text-muted);">Absolutely! You can upgrade or
-                            downgrade your plan at any time through your dashboard.</p>
+                    <div class="faq-item">
+                        <div class="faq-question">Can I upgrade my plan later? <i class='bx bx-chevron-down'></i></div>
+                        <div class="faq-answer">Absolutely! You can upgrade or downgrade your plan at any time through
+                            your dashboard.</div>
                     </div>
                 </div>
             </div>
@@ -368,14 +368,14 @@
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
-                        <li><i class='bx bx-map'></i> 123 Tech Street, Silicon Valley</li>
-                        <li><i class='bx bx-phone'></i> +1 234 567 890</li>
+                        <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                        <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
                         <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2024 IT SQUAD. All rights reserved.</p>
+                <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
             </div>
         </div>
     </footer>
