--- a/login.html
+++ b/login.html
@@ -8,68 +8,75 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
-        body {
-            /* Full screen centered login */
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .login-wrapper {
-            flex: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: var(--gradient-hero);
-            padding: 2rem;
-        }
-
-        .login-card {
-            width: 100%;
-            max-width: 400px;
+        @media (min-width: 768px) {
+            .hidden-mobile {
+                display: block !important;
+            }
         }
     </style>
 </head>
 
 <body>
 
-    <div class="login-wrapper">
-        <div class="card login-card">
-            <div style="text-align: center; margin-bottom: 2rem;">
-                <a href="index.html" class="logo justify-center" style="margin-bottom: 1rem;">
-                    <i class='bx bx-code-block'></i> IT SQUAD
-                </a>
-                <h2>Welcome Back</h2>
-                <p style="color: var(--text-muted);">Please sign in to your account</p>
+    <div class="login-wrapper" style="flex-direction: row; background: var(--bg-body); padding: 0;">
+        <div
+            style="flex: 1; display: none; background: url('https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80') center/cover; min-height: 100vh; position: relative; @media(min-width: 768px) { display: block; }">
+            <div
+                style="position: absolute; inset: 0; background: linear-gradient(to bottom, rgba(79, 70, 229, 0.4), rgba(0, 0, 0, 0.6)); display: flex; align-items: flex-end; padding: 3rem; color: white;">
+                <div>
+                    <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Welcome to IT SQUAD</h2>
+                    <p style="font-size: 1.1rem; opacity: 0.9;">Secure, reliable, and 24/7 IT support for your business
+                        needs.</p>
+                </div>
             </div>
-
-            <form action="user-dashboard.html">
-                <div style="margin-bottom: 1.5rem;">
-                    <label style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Email</label>
-                    <input type="email" class="btn"
-                        style="width: 100%; text-align: left; background: var(--bg-body); border: 1px solid var(--border);"
-                        placeholder="user@example.com">
-                </div>
-                <div style="margin-bottom: 1.5rem;">
-                    <label style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Password</label>
-                    <input type="password" class="btn"
-                        style="width: 100%; text-align: left; background: var(--bg-body); border: 1px solid var(--border);"
-                        placeholder="••••••••">
+        </div>
+        <div
+            style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; background: var(--bg-body);">
+            <div class="card login-card"
+                style="box-shadow: none; border: none; background: transparent; max-width: 450px;">
+                <div style="text-align: center; margin-bottom: 2rem;">
+                    <a href="index.html" class="logo justify-center" style="margin-bottom: 1rem;">
+                        <i class='bx bx-code-block'></i> IT SQUAD
+                    </a>
+                    <h2>Welcome Back</h2>
+                    <p style="color: var(--text-muted);">Please sign in to your account</p>
                 </div>
 
-                <div class="flex justify-between items-center" style="margin-bottom: 2rem; font-size: 0.9rem;">
-                    <label class="flex items-center gap-1">
-                        <input type="checkbox"> Remember me
-                    </label>
-                    <a href="#" style="color: var(--primary);">Forgot Password?</a>
-                </div>
+                <form action="user-dashboard.html">
+                    <div style="margin-bottom: 1.5rem;">
+                        <label style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Email</label>
+                        <input type="email" class="btn"
+                            style="width: 100%; text-align: left; background: var(--bg-card); border: 1px solid var(--border); color: var(--text-main);"
+                            placeholder="user@example.com">
+                    </div>
+                    <div style="margin-bottom: 1.5rem;">
+                        <label style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Password</label>
+                        <input type="password" class="btn"
+                            style="width: 100%; text-align: left; background: var(--bg-card); border: 1px solid var(--border); color: var(--text-main);"
+                            placeholder="••••••••">
+                    </div>
 
-                <div class="flex gap-1" style="flex-direction: column;">
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Sign In</button>
-                    <a href="admin-dashboard.html" class="btn btn-outline"
-                        style="width: 100%; text-align: center;">Admin Demo</a>
-                </div>
-            </form>
+                    <div class="flex justify-between items-center" style="margin-bottom: 2rem; font-size: 0.9rem;">
+                        <label class="flex items-center gap-1">
+                            <input type="checkbox"> Remember me
+                        </label>
+                        <a href="#" style="color: var(--primary);">Forgot Password?</a>
+                    </div>
+
+                    <div class="flex gap-1" style="flex-direction: column;">
+                        <button type="submit" class="btn btn-primary" style="width: 100%;">Sign In</button>
+                        <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem;">
+                            Don't have an account? <a href="register.html"
+                                style="color: var(--primary); font-weight: 600;">Sign Up</a>
+                        </div>
+                        <div style="text-align: center; margin-top: 0.5rem; font-size: 0.9rem;">
+                            <a href="index.html" style="color: var(--text-muted);"><i class='bx bx-left-arrow-alt'></i>
+                                Back
+                                to Home</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
